--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,8 +1,8 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "{ (Some) Bayesian Clinical Trial, Group Sequential} $\\subset$ { Adaptive Designs}"
 collection: talks
 type: "Class Presentation"
-permalink: /talks/2020-03-01-Sequential-Bayesian-Trial
+permalink: /talks/2020-03-05-Sequential-Bayesian-Trial
 venue: "University of Alabama at Birmingham, Department of Biostatistics"
 date: 2012-03-05
 location: "Birmingham, Alalbama"
