--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,5 @@
 ---
-title: "GitHub_website"
+title: "Boyi's Website (Currently in renovation)"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+We are working on it. 👨‍🔧
