--- a/index.qmd
+++ b/index.qmd
@@ -25,7 +25,7 @@ I am an applied statistician and biomedical data scientist working at the inters
 
 ------------------------------------------------------------------------
 
-Currently, I am a postdoctoral fellow in Biostatistics at Johns Hopkins Bloomberg of School of Public Health, mentored by Dr. [Stephanie Hicks](https://www.stephaniehicks.com/). I am open to opportunities to advance my scientific career that tentatively starts 2025 Summer.
+Currently, I am a postdoctoral fellow in Biostatistics at Johns Hopkins Bloomberg of School of Public Health, mentored by Dr. [Stephanie Hicks](https://www.stephaniehicks.com/). I am open to opportunities that advance my scientific career, tentatively starting date in 2025 Summer.
 
 ```{=html}
 <center><img src="http://ghchart.rshah.org/boyiguo1" alt="Boyi Guo's Github chart" /, width = "100%", height = "100%"></a></center>
